<?xml version="1.0" ?>
<package format="2">
  <name>rviz_ortho_view_controller</name>
  <version>0.1.0</version>
  <description>An orthographic camera view controller for RViz</description>
  <maintainer email="andrewjshort@gmail.com">Andrew Short</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO(lucasw) build_depend and run_depend, update this xml -->
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
